another attempt to commit/push all files

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -18,7 +18,7 @@ library(ggplot2)
 
 ```{r Load data}
 activ.data <- read.csv("activity.csv")
-# Reformat dates
+# Reformat the dates
 activ.data$date <- as.Date(activ.data$date)
 # Calculate time of day from interval text
 hrs <- substr(activ.data$interval, 1, nchar(activ.data$interval) - 2)
