--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -41,7 +41,7 @@ StepsPerDay <-
 mean.StepsPerDay <- round(mean(StepsPerDay), 0)
 median.StepsPerDay <- median(StepsPerDay)
 
-# histogram of the total number of steps taken each day
+# histogram of the total number of steps that are taken each day
 par(mar = c(4, 4, 2, 0.1))
 hist(StepsPerDay, breaks = 10,
      xlab = "Steps per day",
